--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -11,6 +11,7 @@
     <script src="https://kit.fontawesome.com/a81368914c.js"></script>
 
     <title>Assignment portal</title>
+     <link rel="icon" href="https://imgur.com/on10hE7.jpeg" type="image/x-icon">
     <nav class="navbar navbar-expand-xl navbar-dark bg-dark  justify-content-between" style="margin-bottom: 2%; padding: 15px;">
         <h2 class="display-4 navbar-brand">Assignment</h2>
 
