--- a/views/student.ejs
+++ b/views/student.ejs
@@ -6,6 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="width=device-width, initial-scale=1" name="viewport">
 
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+    crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
     <script src="https://kit.fontawesome.com/a81368914c.js"></script>
@@ -37,8 +46,6 @@
 <body style="background-color: #DFFFF4;">
 
     <div class="container">
-
-
         <div class="jumbotron">
             <div class="container-sm">
                 <h4 class="display-4 text-center" style="margin-bottom: 3%;">Student Details</h4>
@@ -65,6 +72,10 @@
                                     <th scope="col">Assignment1</th>
                                     <th scope="col">Assignment2</th>
                                     <th scope="col">Assignment3</th>
+                                    <th scope="col">Link1</th>
+                                    <th scope="col">Link2</th>
+                                    <th scope="col">Link3</th>
+
                                 </tr>
                             </thead>
                             <tbody>
@@ -93,6 +104,15 @@
                                     <td>
                                         <%= message.assignment3 %>
                                     </td>
+                                    <td>
+                                        <%= message.link1 %>
+                                    </td>
+                                    <td>
+                                        <%= message.link2 %>
+                                    </td>
+                                    <td>
+                                        <%= message.link3%>
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
@@ -112,7 +132,25 @@
             </div>
 
         </div>
-
+        <form action="/auth/addLink" method="POST" class="align-middle ">
+            <h2 style="margin-bottom: 2%; "> <span class="badge badge-pill badge-dark mt-5 ">Submit Assignment Link</span></h2>
+            <div class="input-group mb-3">
+                <div class="input-group-prepend ">
+                    <span class="input-group-text bg-dark text-white " id="inputGroup-sizing-default ">USN</span>
+                </div>
+                <input type="text" class="form-control" type="text" name="usnSearch" id="usnSearch" aria-describedby="button-addon2">
+                <div class="input-group-prepend">
+                    <select name = "dropdown" class="btn btn-success rounded ">
+                        <option value="select" >Assignment to be submitted</option>
+                        <option value = "link1" name="l1" id="l1">Link1</option>
+                        <option value = "link2" name="l2" id="l2">Link2</option>
+                        <option value = "link3" name="l3" id="l3">Link3</option>
+                    </select>
+                </div>
+                <input type="text" class="form-control" name="driveLink" id="driveLink"aria-label="Text input with dropdown button">
+              </div>
+              <button type=" submit " value="Submit " class="btn btn-success rounded " style="width: 75%; margin-bottom: 1.9rem; ">Submit</button>
+        </form>
 
     </div>
 
