--- a/views/teacher.ejs
+++ b/views/teacher.ejs
@@ -175,12 +175,12 @@
                     <div class="container-sm ">
                         <div class="container-sm " style="width: 720px; ">
                             <div class="jumbotron " style="border: 1px solid black; ">
-                                <h4 class="display-4 text-center " id="deleteByUsn " style="margin-bottom: 3%; ">Delete Student From Database</h4>
+                                <h4 class="display-4 text-center " style="margin-bottom: 3%; ">Delete Student From Database</h4>
                                 <h2 style="margin-bottom: 2%; "> <span class="badge badge-pill badge-dark mt-4 ">Delete By USN</span></h2>
                                 <img style="width: 300px; " class="img-fluid mx-auto d-block mb-5 " src="/img/throw.svg " alt="search " />
 
                                 <form action="/auth/remove " method="POST ">
-                                    <div class="input-group mb-3 ">
+                                    <div class="input-group mb-3 " id="deleteByUsn">
                                         <input type="text " pattern="1ew\d\d[a-z][a-z]\d\d\d" title="it should start with 1ew and year then branc then roll number" class="form-control " type="text " name="usnSearch " id="usnSearch " aria-describedby="button-addon2 ">
                                         <div class="input-group-append ">
                                             <button class="btn btn-outline-dark bg-danger text-white " value="Delete Record " type="submit " id="button-addon2 ">Delete Record</button>
