--- a/views/student.ejs
+++ b/views/student.ejs
@@ -5,7 +5,6 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
     <script src="https://kit.fontawesome.com/a81368914c.js"></script>
@@ -36,24 +35,51 @@
 
 <body style="background-color: #DFFFF4;">
 
-    <div class="container">
+    <h1 class="display-1 text-center">Student Portal</h1>
+
+    <div class="col-3 mx-auto ">
+        <a class="mx-2 text-primary " style="font-size: 1.1rem;" href="#checkDetails">Check Details</a>
+        <a class="mx-2 text-primary " style="font-size: 1.1rem;" href="#submitLinks">Update Links</a>
+    </div>
+    <%  if(typeof isError!= "undefined" && isError ) { %>
+        <img style="width: 400px;" class="img-fluid mx-auto d-block my-5 mx-5" src="/img/error404.svg" alt="error 404" />
+        <% } %>
+            <% if(typeof isSuccess!= "undefined" && isSuccess) { %>
+                <h4 class="alert alert-success text-center  my-5">
+                    <%= isSuccess %>
+                </h4>
+
+                <% } %>
+
+                    <img style="height: 600px;" class="img-fluid mx-auto d-block mb-5" src="/img/class.svg" alt="class" />
 
 
-        <div class="jumbotron">
-            <div class="container-sm">
-                <h4 class="display-4 text-center" style="margin-bottom: 3%;">Student Details</h4>
 
-                <form action="/auth/getDetails" method="POST">
-                    <h3 style="margin-bottom: 2%; "> <span class="badge badge-pill badge-dark ">Enter The USN</span></h3>
-                    <div class="input-group mb-3">
-                        <input type="text" class="form-control" type="text" name="usnSearch" id="usnSearch" aria-describedby="button-addon2">
-                        <div class="input-group-append">
-                            <button class="btn btn-outline-secondary" value="submit" type="submit" id="button-addon2">Submit</button>
+                    <div class="container">
+                        <div class="jumbotron" style="border: 1px solid black;">
+                            <div class="container-sm">
+                                <h4 class="display-4 text-center" style="margin-bottom: 3%;">Details of Student</h4>
+
+                                <form action="/auth/getDetails" method="POST">
+                                    <h3 id="checkDetails" style="margin-bottom: 2%; "> <span class="badge badge-pill badge-dark ">Search by your usn</span></h3>
+                                    <img class="img-fluid mx-auto d-block mb-5" src="/img/details.svg" style="width:350px" />
+                                    <div class="input-group mb-3">
+                                        <input type="text" class="form-control" pattern="1ew\d\d[a-z][a-z]\d\d\d" title="it should start with 1ew and year then branc then roll number" type="text" name="usnSearch" id="usnSearch" aria-describedby="button-addon2">
+                                        <div class="input-group-append">
+                                            <button class="btn btn-outline-secondary" value="submit" type="submit" id="button-addon2">Submit</button>
+                                        </div>
+                                    </div>
+
+                                </form>
+
+                            </div>
+
                         </div>
                     </div>
 
-                    <% if(typeof message!= "undefined" && message) { %>
 
+                    <% if(typeof message!= "undefined" && message) { %>
+                        <h4>Student Basic Details</h4>
                         <table class="table able-bordered">
                             <thead class="thead-dark">
                                 <tr>
@@ -65,6 +91,9 @@
                                     <th scope="col">Assignment1</th>
                                     <th scope="col">Assignment2</th>
                                     <th scope="col">Assignment3</th>
+                                    <th scope="col">link1</th>
+                                    <th scope="col">link2</th>
+                                    <th scope="col">link3</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -93,6 +122,21 @@
                                     <td>
                                         <%= message.assignment3 %>
                                     </td>
+                                    <td>
+                                        <a href="<%= message.link1 %>">
+                                            <%= message.link1 %>
+                                        </a>
+                                    </td>
+                                    <td>
+                                        <a href="<%= message.link2 %>">
+                                            <%= message.link2 %>
+                                        </a>
+                                    </td>
+                                    <td>
+                                        <a href="<%= message.link3 %>">
+                                            <%= message.link3 %>
+                                        </a>
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
@@ -100,21 +144,36 @@
                         <% } %>
 
 
+                            <hr style="width: 720px;" class="my-4 ">
+                            <div class="container">
+                                <div class="jumbotron" style="border: 1px solid black;">
+                                    <div class="container-sm">
 
-                </form>
-                <%   if(typeof isError!= "undefined" && isError ) { %>
-                    <img style="width: 400px;" class="img-fluid mx-auto d-block mb-5" src="/img/error404.svg" alt="error 404" />
-                    <% } %>
+                                        <h4 id="submitLinks" class="display-4 text-center" style="margin-bottom: 5%;">Submit Assignment Link</h4>
+                                        <img class="img-fluid mx-auto d-block mb-5" src="/img/add link.svg" style="width:350px" alt="details" />
+                                        <form action="/auth/addLink" method="POST" class="align-middle ">
+                                            <div class="input-group mb-3">
+                                                <div class="input-group-prepend ">
+                                                    <span class="input-group-text bg-dark text-white " id="inputGroup-sizing-default ">USN</span>
+                                                </div>
 
+                                                <input type="text" class="form-control" type="text" name="usnSearch" id="usnSearch" aria-describedby="button-addon2">
+                                                <div class="input-group-prepend">
 
-
-
-            </div>
-
-        </div>
-
-
-    </div>
+                                                    <select name="dropdown" class="btn btn-success rounded ">
+                        <option value="select" >Assignment to be submitted</option>
+                        <option value = "link1" name="l1" id="l1">Link1</option>
+                        <option value = "link2" name="l2" id="l2">Link2</option>
+                        <option value = "link3" name="l3" id="l3">Link3</option>
+                    </select>
+                                                </div>
+                                                <input type="text" class="form-control" name="driveLink" id="driveLink" aria-label="Text input with dropdown button">
+                                            </div>
+                                            <button type=" submit " value="Submit " class="btn btn-success rounded " style="width: 75%; margin-bottom: 1.9rem; ">Submit</button>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
 
 </body>
 
