--- a/views/student.ejs
+++ b/views/student.ejs
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/a81368914c.js"></script>
     <!-- <script src="../public/js/in.js" defer></script> -->
 
-    <title>Assignment portal</title>
+    <title>Studnets | Assignment portal</title>
     <link rel="icon" href="https://imgur.com/on10hE7.jpeg" type="image/x-icon">
     <nav class="navbar navbar-expand-xl navbar-dark bg-dark  justify-content-between" style="margin-bottom: 2%; padding: 15px;">
         <h2 class="display-4 navbar-brand">Assignment</h2>
