--- a/views/teacher.ejs
+++ b/views/teacher.ejs
@@ -7,11 +7,11 @@
     <meta content="width=device-width, initial-scale=1" name="viewport">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-
+    <link rel="icon" href="https://imgur.com/on10hE7.jpeg" type="image/x-icon">
     <script src="https://kit.fontawesome.com/a81368914c.js"></script>
     <!-- <script src="/js/in.js" defer></script> -->
 
-    <title>Assignment portal</title>
+    <title>Teachers | Assignment portal</title>
     <nav class="navbar navbar-expand-xl navbar-dark bg-dark  justify-content-between" style="margin-bottom: 2%; padding: 15px;">
         <h2 class="display-4 navbar-brand">Assignment</h2>
 
