style view update

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -203,7 +203,7 @@
                 <h4 id="updateMarks" class="display-4 text-center" style="margin-bottom: 3%;">Check logs</h4>
                 <img style="width: 300px;" class="img-fluid mx-auto d-block mb-5" src="/img/log.svg" alt="logs" />
                 <form action="/auth/getLog" method="POST">
-                    <button type=" submit " value="Submit " class="btn btn-success rounded mx-auto " style="width: 100%; margin-bottom: 1.9rem; ">Submit</button>
+                    <button type=" submit " value="Submit " class="btn btn-success rounded mx-auto " style="width: 100%; margin-bottom: 1.9rem; ">View Logs</button>
                 </form>
 
                 <% if(typeof logTable!= "undefined" && logTable) { %>
