--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -7,8 +7,9 @@
     <meta content="width=device-width, initial-scale=1" name="viewport">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="icon" href="https://imgur.com/on10hE7.jpeg" type="image/x-icon">
+
     <title>Assignment portal</title>
+    <link rel="icon" href="https://imgur.com/on10hE7.jpeg" type="image/x-icon">
     <nav class="navbar navbar-expand-xl navbar-dark bg-dark  justify-content-between" style="margin-bottom: 2%; padding: 15px;">
         <h2 class="display-4 navbar-brand">Assignment</h2>
 
@@ -30,33 +31,127 @@
     </nav>
 </head>
 
-<body>
+<body style="background-color: #DFFFF4;">
+    <h1 class="display-1 text-center">View Details</h1>
 
-    <div class="container">
-
-
-        <div class="row">
-
-            <div class="col align-middle">
-                <img class="img-fluid" src="/img/left_pic.jpg" alt="banner" />
-
-            </div>
-
-            <div class="col-lg-" style="margin: 5%;">
-            </div>
-
-
-        </div>
-
+    <div class="col-3 mx-auto ">
+        <a class="mx-2 text-primary " style="font-size: 1.1rem;" href="#checkDetails">Student details</a>
+        <a class="mx-2 text-primary " style="font-size: 1.1rem;" href="#teacherDetails">Teacher details</a>
     </div>
 
+    <% if(typeof isError!= "undefined" && isError){ %>
+        <img style="width: 400px;" class="img-fluid mx-auto d-block my-5 mx-5" src="/img/error404.svg" alt="error 404" />
+        <% } %>
+
+            <img style="width: 600px; margin-top: 5rem;" class="img-fluid mx-auto d-block mb-5" src="/img/homepage.svg" alt="class" />
+
+            <div class="container">
+                <div class="jumbotron" style="border: 1px solid black;">
+                    <div class="container-sm">
+                        <h4 class="display-4 text-center" id="checkDetails" style="margin-bottom: 3%;">View All Students By Section</h4>
+                        <img class="img-fluid mx-auto d-block mb-5" src="/img/no_data.svg" style="width:300px" />
+                        <form action="/auth/viewDetails" method="POST">
+                            <h3 id="checkDetails" style="margin-bottom: 2%; "> <span class="badge badge-pill badge-dark ">Enter class</span></h3>
+                            <div class="input-group mb-3">
+                                <input type="text" class="form-control" pattern="cs[1-4]" title="cs-section[1-4]" type="text" name="section" id="section" aria-describedby="button-addon2">
+                                <div class="input-group-append">
+                                    <button class="btn btn-outline-secondary" value="submit" type="submit" id="button-addon2">Submit</button>
+                                </div>
+                            </div>
+                        </form>
+                        <% if(typeof data!= "undefined" && data) { %>
+                            <h4>Student Data</h4>
+                            <table class="table able-bordered">
+                                <thead class="thead-dark">
+                                    <tr>
+                                        <th scope="col">usn</th>
+                                        <th scope="col">Name</th>
+                                        <th scope="col">Branch</th>
+                                        <th scope="col">Semester</th>
+                                        <th scope="col">Class</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <% data.forEach(function(data){ %>
+                                        <tr>
+                                            <th scope="row">
+                                                <%= data.usn %>
+                                            </th>
+                                            <td>
+                                                <%= data.name %>
+                                            </td>
+                                            <td>
+                                                <%= data.branch %>
+                                            </td>
+                                            <td>
+                                                <%= data.semester %>
+                                            </td>
+                                            <td>
+                                                <%= data.class %>
+                                            </td>
+                                        </tr>
+                                        <% }); %>
+                                </tbody>
+                            </table>
+                            <% } %>
+
+                    </div>
+
+                </div>
+            </div>
+            <div class="container">
+                <div class="jumbotron" style="border: 1px solid black;">
+                    <div class="container-sm">
+                        <h4 class="display-4 text-center" style="margin-bottom: 3%;">Teacher Details</h4>
+                        <img class="img-fluid mx-auto d-block mb-5" src="/img/homepage1.svg" style="width:350px" />
+                        <form action="/auth/teacherDetails" method="POST">
+                            <h3 id="teacherDetails" style="margin-bottom: 2%; "> <span class="badge badge-pill badge-dark ">Search By class</span></h3>
+                            <div class="input-group mb-3">
+                                <input type="text" class="form-control" pattern="[1-8]cs[1-4]" title="semester_cs_section[1-4]" type="text" name="section" id="section" aria-describedby="button-addon2">
+                                <button class="btn btn-info" value="submit" type="submit" id="button-addon2">Submit</button>
+                            </div>
 
 
+                            <% if(typeof details!= "undefined" && details) { %>
+                                <h4>teacher Details</h4>
+                                <table class="table able-bordered">
+                                    <thead class="thead-dark">
+                                        <tr>
+                                            <th scope="col">Nmae</th>
+                                            <th scope="col">Category</th>
+                                            <th scope="col">Designation</th>
+                                            <th scope="col">Class</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <% details.forEach(function(details){ %>
+                                            <tr>
+                                                <th scope="row">
+                                                    <%= details.name %>
+                                                </th>
+                                                <td>
+                                                    <%= details.category %>
+                                                </td>
+                                                <td>
+                                                    <%= details.job %>
+                                                </td>
+                                                <td>
+                                                    <%= details.class %>
+                                                </td>
+                                            </tr>
+                                            <% }); %>
+                                    </tbody>
+                                </table>
+                                <% } %>
+                        </form>
+                    </div>
+                </div>
 
+            </div>
 
 </body>
 
-<footer style="margin-top: 2%; padding: 10px;" class="page-footer font-small blue bg-dark">
+<footer style="margin-top: 2%; padding: 10px; position: relative;" class="page-footer font-small blue bg-dark">
 
     <div class="footer-copyright text-center text-white py-3 ">
         © 2020 Copyright : Sagar & Mimansha Swarup
